--- a/css/styles.css
+++ b/css/styles.css
@@ -15,10 +15,6 @@ body {
 ul {
   margin: 0;
 }
-.section-header {
-  border-bottom: 1px solid;
-  border-color: var(--header-line);
-}
 .section {
   padding-block: 94px;
 }
@@ -29,11 +25,16 @@ ul {
   padding: 0 15px;
   margin: 0 auto;
 }
+.section-border {
+  border-bottom: 1px solid;
+  border-color: var(--header-line);
+}
 .nav-wrap-content {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  min-height: 80px;
+  padding-top: 24px;
+  padding-bottom: 25px;
 }
 .nav-menu {
   flex-grow: 1;
@@ -96,7 +97,7 @@ ul {
   color: var(--white-item);
 }
 .main-title-wrap {
-  padding: 200px 0;
+  padding: 106px 0;
 }
 .main-title {
   font-weight: 900;
@@ -117,7 +118,7 @@ ul {
   border: none;
   border-radius: 4px;
   width: 200px;
-  height: 50px;
+  padding: 10px 0;
   font-family: inherit;
   font-weight: 700;
   font-size: 16px;
@@ -133,7 +134,6 @@ ul {
 }
 .grey-rectangle {
   background: var(--grey-bkg);
-  height: 600px;
 }
 .hidden-dot {
   list-style-type: none;
@@ -183,7 +183,11 @@ ul {
 .about-us {
   background-color: var(--light-grey-item);
 }
+.about-us img {
+  margin-bottom: 30px;
+}
 .about-us h3 {
+  margin: 0 0 10px;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.18;
@@ -191,7 +195,7 @@ ul {
   letter-spacing: 0.03em;
 }
 .about-us p {
-  margin-top: 10px;
+  margin: 0;
   font-size: 16px;
   line-height: 1.18;
   text-align: center;
@@ -200,16 +204,14 @@ ul {
 }
 .about-us-box li {
   width: 270px;
-  height: 368px;
+  padding-bottom: 30px;
   background: var(--white-item);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-  margin-top: 10px;
 }
 .footer-box {
   background: var(--grey-bkg);
-  margin-bottom: 71px;
 }
 .footer-box p {
   margin-top: 20px;
@@ -247,16 +249,23 @@ ul {
 .link-footer li {
   margin-top: 9px;
 }
-/* Portfolio site */
-.nav-line {
-  border-bottom: 1px solid;
-  border-color: var(--header-line);
+
+/* 
+=============================== 
+Specific portfolio styles below
+=============================== 
+*/
+
+.portfolio-btn-wrap ul {
+  display: flex;
+  justify-content: center;
+  gap: 8px;
 }
 .portfolio-button {
   background-color: var(--light-grey-item);
   border: none;
   border-radius: 4px;
-  height: 38px;
+  padding: 6px 22px;
   font-family: inherit;
   font-weight: 500;
   font-size: 16px;
@@ -264,42 +273,42 @@ ul {
   text-align: center;
   letter-spacing: 0.03em;
   cursor: pointer;
-  margin-top: 94px;
 }
 .portfolio-button:hover {
   color: var(--white-item);
   background-color: var(--brand-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
-.portfolio-btn-inline {
-  margin-block-start: 0;
-  margin-block-end: 0;
+.portfolio-box-wrap {
+  padding: 34px 0 0;
 }
-.portfolio-btn-inline li {
-  display: inline;
+.portfolio-box-wrap ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 30px;
 }
 .portfolio-box li {
   width: 370px;
-  height: 404px;
   background: var(--white-item);
-  margin-top: 34px;
+}
+.portfolio-box img {
+  display: block;
+}
+.portfolio-box-desc {
   border-top: 1px solid;
   border-left: 1px solid;
   border-right: 1px solid;
   border-bottom: 1px solid;
   border-color: var(--light-line);
+  width: 100%;
+  padding: 20px 24px;
 }
-.portfolio-box-desc {
-  width: 322px;
-  height: 70px;
-  margin-top: 20px;
-  margin-right: 24px;
-  margin-bottom: 20px;
-  margin-left: 24px;
+.portfolio-box-desc p:first-child {
+  margin: 0 0 4px;
 }
-.portfolio-box-desc p {
-  margin-block-start: 0;
-  margin-block-end: 0;
+.portfolio-box-desc p:last-child {
+  margin: 0;
 }
 .project-name {
   font-weight: 700;
